--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bevy = "0.9.1"
+bevy-inspector-egui = "0.17.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
